# ros-colocalization

./: .gitignore  CMakeLists.txt  Charge all required batteries.  SoftwareArchitecture.txt  main.cpp  package.xml
launch/: BaseStation.launch  Rover1.launch  Rover2.launch  RoverA.launch  RoverB.launch  colocalization.launch
srv/: optimizeFactorGraph.srv
